--- a/evvm/package.json
+++ b/evvm/package.json
@@ -11,9 +11,11 @@
     "relayer": "ts-node src/relayer.ts"
   },
   "dependencies": {
-    "ethers": "^6.10.0",
-    "dotenv": "^16.3.1",
+    "@evvm/testnet-contracts": "^2.1.3",
+    "@openzeppelin/contracts": "^5.4.0",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.10.0",
     "express": "^4.18.2",
     "uuid": "^9.0.1"
   },
