--- a/evvm/package.json
+++ b/evvm/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "fisher": "ts-node src/fisher.ts",
-    "relayer": "ts-node src/relayer.ts"
+    "relayer": "ts-node src/relayer.ts",
+    "check": "ts-node check-evvm-connection.ts",
+    "test:evvm": "ts-node test-evvm.ts"
   },
   "dependencies": {
     "@evvm/testnet-contracts": "^2.1.3",
